# dead-kunban

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  database.db  kanban.json  package-lock.json  pyproject.toml  start-dev.sh
backend/: alembic.ini  database.db  shell.py
backend/migrations/versions/: 693095caf62b_.py  6bd4658c1c25_.py  e8798d422da8_init_everything.py
backend/src/: config.py  db_models.py  main.py  schemas.py
backend/src/api/: __init__.py
backend/src/templates/: kanban.html  real_base.html
frontend/: package-lock.json  package.json
frontend/kanbanjs/: package-lock.json  package.json
frontend/kanbanjs/src/: App.jsx  Card.jsx  CardComponent.jsx  ColumnComponent.jsx  ColumnDict.jsx  Dialog.jsx  Kanban.jsx  ManagementMenu.jsx  card.css  cardC.jsx  form_react.jsx  index.css  kanban.js  kanban_container_react.jsx  kanban_management_menu_react.jsx  requests.jsx
frontend/src/: App.jsx  Card.jsx
frontend/src/components/: CardComponent.jsx  ColumnComponent.jsx  ColumnDict.jsx  Dialog.jsx
migrations/: env.py
migrations/versions/: 035c54de2fe0_initial.py
src/: __init__.py  db_models.py  main.py  models.py  schemas.py
src/api/: __init__.py
src/api/routes/: views.py
src/static/: card.css  card_window.js  draggable_board.js  github.css  kanban.js  kanban2.css  radial_menu_react.js  radialmenu.css  radialmenu.js
src/templates/: index.html  kanban.html  real_base.html  test_styles.html
tg-frontend/: main.py
tg_frontend/: add_task.py  crud_ops.py  init.py  main.py  markups.py  registercallback.py  task_actions.py  utils.py
(+8 files in other folders)
